@@ -1,6 +1,9 @@
+from singularity.code import g
+
 from singularity.code.graphics.dialog import Dialog
 
 from singularity.code.graphics import g as gg
+from singularity.code.savegame import QUICKSAVE_NAME, create_savegame
 
 
 def toggle_fullscreen():
@@ -17,3 +20,8 @@ def reload_theme():
         theme_id = theme.current.id
         data.load_themes()
         theme.set_theme(theme_id, force_reload=True)
+
+
+def quicksave():
+    if g.is_game_running():
+        create_savegame(QUICKSAVE_NAME)
