@@ -1,5 +1,16 @@
 Endgame: Singularity Changelog
 
+V1.XX (YYYY.YY.YY):
+
+USER-VISIBLE CHANGES:
+- The game now requires `polib`. Previously, we had an embedded
+  copy as fallback. However, it did not work with python3.11.
+- The hotkey `F5` is now "quicksave" rather than "reload theme".
+  (Reload theme is now `F6`). The "quicksave" is a new feature,
+  but sadly does not provide any feedback on success for now.
+- Save games are now ordered by time (most recent first) rather
+  than name. This makes it easier to find the latest savegame.
+
 V1.00 (2020.07.02):
 
 GAME CONTENT CHANGES:
